<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TransferFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accDestination"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAccountDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:inputType="number"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:inputType="number"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"/>

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/transfer" />
</LinearLayout>