<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accNumber"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:enabled="false"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:enabled="false"
        android:inputType="text"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/balance"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:enabled="false"
        android:inputType="text"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>